# Version.cmake

./: .gitignore  CMakeLists.txt  LICENSE  README.md
CMake/: Version.cmake  Version.hpp.in  custom_version.h.in
tests/: CMakeLists.txt
tests/test_basic/: CMakeLists.txt  check.cmake
tests/test_cpp23_namespace/: CMakeLists.txt  check.cmake
tests/test_custom_template/: CMakeLists.txt  check.cmake
tests/test_out_dir_override/: CMakeLists.txt  check.cmake
tests/test_prefix/: CMakeLists.txt  check.cmake
